# constellation

./: .flyteignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  survey_scale_architecture.md
configs/: edff_mock.yaml  edff_single_tile.yaml
infra/terraform/: .gitignore  .terraform.lock.hcl  README.md  configure-eks-values.sh  eks.tf  helm.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
src/constellation/: __init__.py  catalog_assembler.py  cli.py  config.py  discovery.py  extractor.py  iceberg_catalog.py  manifest.py  mock_shine.py  quadrant_resolver.py  result_writer.py  schemas.py  storage.py  tiling.py
src/constellation/workflows/: __init__.py  local_runner.py  pipeline.py  tasks.py
tests/: conftest.py  test_catalog_assembler.py  test_cli.py  test_config.py  test_discovery.py  test_extractor.py  test_iceberg_catalog.py  test_integration.py  test_manifest.py  test_mock_shine.py  test_quadrant_resolver.py  test_result_writer.py  test_schemas.py  test_storage.py  test_tiling.py  test_workflows.py
