[project]
name = "constellation"
version = "0.1.0"
description = "Orchestration layer for survey-scale weak lensing shear inference"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "CosmoStat Lab (CEA / CNRS)"}]
keywords = ["cosmology", "weak-lensing", "euclid", "orchestration"]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pyarrow>=18.0",
    "pyiceberg[sql-sqlite,pyarrow]>=0.8.0",
    "click>=8.0",
    "numpy>=2.0",
    "boto3>=1.35",
    "flytekit>=1.14",
    "astropy>=7.2.0",
    "fsspec[s3]>=2024.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "moto[s3]>=5.0",
]
dev = [
    "black>=24.0",
    "isort>=5.12",
]

[project.scripts]
constellation = "constellation.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/constellation"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "s3: marks tests requiring S3 access",
]
